--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
   "license": "MIT",
   "require": {
     "php": ">=5.5.0",
-    "rvtraveller/qs-composer-installer": "1.0"
+    "rvtraveller/qs-composer-installer": "^1.0"
   }
 }
